<resources>
    <string name="app_name">Menu Profile</string>
    <string name="submit">Submit</string>
    <string name="register_title">Register</string>
    <string name="name">Name</string>
    <string name="edit_name">Masukkan Nama</string>
    <string name="edit_email">Masukkan Email</string>
    <string name="edit_password">Masukkan Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender_label">Gender</string>
    <string name="male_radio">Male</string>
    <string name="female_radio">Female</string>
    <string name="hello">hello</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>
